on avance sur la page accueil. le titre est bien installé, le texte est présent, il fautg maintenant aligner le contenu correctement

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,5 +1,4 @@
 // Define variables for your color scheme
-
 // For example:
 $red: #FD1015;
 $blue: #167FFB;
@@ -8,3 +7,9 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+#background-color {
+    background-color: #FFFAFA;
+    color: #232323;
+}
+
+// 999C57
