--- a/app/assets/stylesheets/config/_font_size.scss
+++ b/app/assets/stylesheets/config/_font_size.scss
@@ -2,6 +2,10 @@ h1 {
     font-size: 32px !important;
 }
 
-h2 {
+h3 {
+    font-size: 28px !important;
+}
+
+h3 {
     font-size: 24px !important;
 }
