--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -12,7 +12,7 @@
         width: 100%;
         height: auto;
         /* Set up positioning */
-        position: fixed;
+        position: absolute;
         top: 0;
         left: 0;
     }
@@ -26,7 +26,7 @@
         text-align: center;
     }
     h1,
-    h2 {
+    h3 {
         color: #FFFAFA;
         text-align: center;
     }
