--- a/app/assets/stylesheets/pages/_navbar.scss
+++ b/app/assets/stylesheets/pages/_navbar.scss
@@ -18,6 +18,10 @@ body {
     font-family: "Avenir Next", "Avenir", sans-serif;
 }
 
+#landing-page {
+    height: 100vh;
+}
+
 #menuToggle {
     width: fit-content;
     display: block;
